human-intervention-logs/org.apache.curator:curator-recipes:5.0.0/gradle-test/gradle-test-2026-06-06T21-32-42-013155Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.curator:curator-recipes:5.0.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:44: error: cannot find symbol
import org.apache.curator.framework.recipes.locks.ChildReaper;
                                                 ^
  symbol:   class ChildReaper
  location: package org.apache.curator.framework.recipes.locks
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:50: error: cannot find symbol
import org.apache.curator.framework.recipes.locks.Reaper;
                                                 ^
  symbol:   class Reaper
  location: package org.apache.curator.framework.recipes.locks
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:332: error: cannot find symbol
                ChildReaper childReaper = new ChildReaper(
                ^
  symbol:   class ChildReaper
  location: class Curator_recipesTest> Task :compileTestJava FAILED


/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:332: error: cannot find symbol
                ChildReaper childReaper = new ChildReaper(
                                              ^
  symbol:   class ChildReaper
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/build/reports/problems/problems-report.html  location: class Curator_recipesTest

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:333: error: package Reaper does not exist
                        client, "/reaper/root", Reaper.Mode.REAP_UNTIL_GONE, 300)) {
                                                      ^
Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:44: error: cannot find symbol
  import org.apache.curator.framework.recipes.locks.ChildReaper;
                                                   ^
    symbol:   class ChildReaper
    location: package org.apache.curator.framework.recipes.locks
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:50: error: cannot find symbol
  import org.apache.curator.framework.recipes.locks.Reaper;
                                                   ^
    symbol:   class Reaper
    location: package org.apache.curator.framework.recipes.locks
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:332: error: cannot find symbol
                  ChildReaper childReaper = new ChildReaper(
                  ^
    symbol:   class ChildReaper
    location: class Curator_recipesTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:332: error: cannot find symbol
                  ChildReaper childReaper = new ChildReaper(
                                                ^
    symbol:   class ChildReaper
    location: class Curator_recipesTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/tests/src/org.apache.curator/curator-recipes/5.0.0/src/test/java/org_apache_curator/curator_recipes/Curator_recipesTest.java:333: error: package Reaper does not exist
                          client, "/reaper/root", Reaper.Mode.REAP_UNTIL_GONE, 300)) {
                                                        ^
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6695-ff46e837/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.curator:curator-recipes:5.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
9 actionable tasks: 1 executed, 8 up-to-date
